{
    "name": "PongInputSystem",
    "maps": [
        {
            "name": "Player1",
            "id": "9ade0d0f-7459-4211-b322-3f8e448b812f",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "b971f591-7228-43f7-8ef1-20da15ea0be5",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "d730908c-d5f0-4f6d-8fba-fcf5035c7ad6",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "909b4776-f8bf-41dd-9157-9d7388f4ecdf",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "9f91b663-b525-48b4-a3db-6f9145f06c89",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Player2",
            "id": "42ccab02-8ae7-4c51-924a-c1bc6627d25c",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "25bd6007-aba5-4168-9706-26d6c0160e61",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "3c7ae3df-2ba2-4298-aa68-02ee9923736d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5fb76491-0472-4e04-86b5-efc86687f5a7",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "50d1c7f8-c4fd-4156-8e8a-1a7f71bdacfc",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Commons",
            "id": "2b3d8860-0159-4e74-b075-482cd722fbab",
            "actions": [
                {
                    "name": "ShowMenu",
                    "type": "Button",
                    "id": "38b1c997-a7f5-4328-8399-d5fa8c0789d0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6f87a8dc-f6e5-41e5-bceb-59ad87115d99",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}